package ca.mcmaster.se2aa4.mazerunner;

// interafce to implement different types of maze solving algorithms
interface  MazeSolver{
      Path solveMaze();
}