package ca.mcmaster.se2aa4.mazerunner.Mazes;

public enum Tile {
    WALL,
    PASS; 
}
