package ca.mcmaster.se2aa4.mazerunner.Utils;

public enum Direction {
    NORTH,
    EAST,
    SOUTH,
    WEST,
    F, 
    R, 
    L;  
}
